replaced deprecate new Integer